# ChangeLog for dev-python/python-quantumclient
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/ChangeLog,v 1.2 2013/03/11 02:43:44 prometheanfire Exp $

*python-quantumclient-2.2.0 (11 Mar 2013)

  11 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-quantumclient-2.2.0.ebuild:
  update of python-quantumclient to 2.2.0

*python-quantumclient-2.1 (26 Jan 2013)

  26 Jan 2013; Matthew Thode <prometheanfire@gentoo.org>
  +python-quantumclient-2.1.ebuild, +metadata.xml:
  initial add of python-quantumclient