@@ -1,26 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST python-quantumclient-2.1.tar.gz 43397 SHA256 4af4e0ff7af90f4e5d22d53a0f3cb74ef0c9a2fdce9619c751d647015dd1d52e SHA512 4c99ec41b2df3c9da14b1786dfaf54b7cd22bec78b670ca6cc0dd3f9e67ca5fa94994156a7c58af4ec116c3ff76f3b8f802605ba948661c332103942f6b0d3f5 WHIRLPOOL dd7557bda467bcb374eaeb42f6ae65dea71c2e1d03228a2f2d546bcc9792f6b6d171482d8d3993196f17959453194a3a660bae8875b6bf1df6affe3c95da3a22
+DIST python-neutronclient-2.2.6.tar.gz 117690 SHA256 674d3fe98a907aff6001bfa6e5284993bd49295190a3aae5feb862f939b6fb5e SHA512 87a9378471249829b1b83d4f9af2638e481004857246e8810c8a8ed196448262b9e87a7a1f49bb52000a6c6a7ac51e71a4d9cf6a9c1b760cf75414c0e05f64c1 WHIRLPOOL 15d0896bc9d33b387ec856ce626a3fd307f8dddacf84d49dfbb45eabca7fff13c0112ab3bd4258b77e867815222568355bc4c55d271bc0113a05a31c9d75c8f3
 DIST python-quantumclient-2.2.0.tar.gz 93495 SHA256 3ca074259112379e54314ce672098c41ce38828957ccfa8177498691adde56a4 SHA512 55c1e02b4ffd11240215ff707d23d733b1cdb868b194b6704c93c53c3fb82c55e46baafa8c581fa902d4b16856fca4b54bf75153ca38ce4d50c0057837b5d6c5 WHIRLPOOL 3ec57ac2ed0d5537631b11271d71285a3f1ed95b35f68443a95ce911eb2f049c1c107d7b601c3399eb1ac6021769f245af7702d78e580ff3bfad7a1b20ef63a8
-EBUILD python-quantumclient-2.1.ebuild 749 SHA256 5c14c6f3199f20652fcecf44cdd84e903bc983522f175390401c9a27c669435e SHA512 f2b68d6cfbd9f8d4ec897f19c5c451ac6ddd1140f7dbc9086983a8fcadd8783fe837985acb57e1fc293a1dbffa02ea8ad7d6891c357fefb3148c36cc630ba181 WHIRLPOOL c082bc85d143cfdeaf690246cc480c8f370f45cad5e963632bcf1f376a157d9ec4a6f5e15e5c9bb8173ac542fe8225f8a02593a3086ca7cb4ed1d6bfaf422f27
 EBUILD python-quantumclient-2.2.0.ebuild 838 SHA256 36d642b4cc02640a313c8603acc15b03bad98fa3d65c3e9271a2eb25d1519dd5 SHA512 bfa43c0e7ff2924a8c32146290d2ede489e306045c7d19375cee979b2720d223d8492634460864bbfc1849d7be422a9b4c78ee0be1cd18c2870e63e74c86d76b WHIRLPOOL d0305246e8e0518778f08cbe38e6a72fe66a7bcfc8ff78265e8a9dcc6e48bc163c653938760337f905e4463abb7f665923574fcd919a0c4576f9ad63b6947bea
-MISC ChangeLog 611 SHA256 424e6ba1d516edad7acc9d551b522a7c1891479e0510acb48b8275141d76f876 SHA512 96566b3283a6dc6265c7006e5fe40838ebd29abce43cb59275f00fcd0e3ee22d0c4e5304a6b6423fa9efac230e08f29f9199b54fcea63636b80e416072c154b4 WHIRLPOOL dd1e36a6e23640a01e2149292ceb615f2d7651309f0147b4e1c2e6232326359e4719c6396086b69cfc7f9a003f200418eeff4882c19fd5f09039b3f91cace17b
+EBUILD python-quantumclient-2.2.6.ebuild 967 SHA256 730e0309acd347deffcc407c04b09db01dd3aed1e9bf5178a58ff9f8fc164eb8 SHA512 f15e6390cb95daa6e0edfc9287b0b97c5efe6402571ae2c2d7ecd52562fddf4f48509b7208647a73d2821796236ccb434bc5e19ce900e36600a9327815679382 WHIRLPOOL 7b0cfd52ea84cc77e58f08395554647e8c6d43db7d4fb9ec44f0ef54ddab137e231274120d1f743cf9bc91827f5b66760a59ea4c6c60bd6f2e702687e8640be1
+MISC ChangeLog 809 SHA256 be9f40a3239ebd645fc6b580688d8a5f4a8b87acda96a68dcd7fc56f30f4692e SHA512 7d98575bbfd17ae7ab7d69357839b14d8c41b6686617d91ecbf6f830ef26f0274d773edb29dd6aa3823634a88a9cd1c63630a6f6c4b2fcf6eb9cbd63f1df61d0 WHIRLPOOL f4b06a9fdffd043b5566883491d5c1526b3095e86cb41a0baa8c72545e4763ed3d26394dff1860a40ea57817890b9b41f1da5da1a166ebff273790d90542b12a
 MISC metadata.xml 376 SHA256 7f9507f4c903309fb9e45582409bb905b9fe2d32ce41f4fbaa5d1a098950f55a SHA512 5c162f3eb3d2ac64d2a7db76e8088e88ed2d3f13020a56decc825e6d89fe5a9be9f9b8c446da99c8003c486d0ad9b579391015f6d8667fee4c96bc136bce1ef7 WHIRLPOOL 2f2f4eb695ff3768cd6b489d1d3240698de8ac47b0691bf62915f55889dfe85eac1a339a5d0ca7dbd09c79b18fbd8e9fcf95d2dc1683778c54c76fe537e558c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRPUToAAoJECRx6z5ArFrDnlMP/i2ogdmETXdOsuByYADTi7MI
-C8KhfDOQk9yXlx0QWUBdzx7uerKgVp6h68lOlxi6hprGxi7jaLbkHr9mHjss/aSN
-fkQnqZwc3c8YbSd1hXqwUt/K80sg0EkZvnqswM8fUiZEPW9RXe6VWPsdj0vRoY1s
-KnaTS4HvDrmNlSWqw2QGmb0MSzHAF3SCTeRVqHixttHodbb+YySi9L0gORYBen98
-UQVKpw0Ohmg0HCq9GMUfcIfkPqpaazLVP4+pnHsgAQmW2lBM6nG9aLcAeuvvjXrx
-VyLWln4nA192CqpMWI2ag6kbrN33P9wSF7OtTloLSQdb6MQZe5HdEv6idw+qk8XU
-8UKBjA1/peyHZZ+32Gq+MCmhg3IG6kpRlK3+lNwY2BUR2klug3rqzXrzRuxm94uP
-XktzRGbPXrZ7psQu2CGfYP7bhUvGZiJeuxdMOsCtPpg8zX7s/HuCxpR+KO4UruQZ
-km1/J4MN2nxCll20gDKAahhsR9tSCJIJ7UqnjX21yjoFUZzwgLRRFOsTifCUUQ6p
-ErP75/KFINBeVfqQGBgqu/UsSwSb46bW5a8imNjTLlF6qUNu+aw8yfme1moFua/e
-tZvvDxWNyBoHTfBxboRRMai9/C3x1CeL2zdaKK3XNBwDqiS3qK3LlxCiI3fav4B7
-qzDy3jMCChaCuidLSZ6W
-=HDuC
+iQIcBAEBCAAGBQJSBwaZAAoJECRx6z5ArFrDW9wQAJa3sFA0/1cSkNt/dzsy6Aq5
+oYnXTg/32dHAqTQXwdPrsfgWdd9R0DItZVxrBtyBXGS4dXhPS0fI/en35T3w7mXU
+Yhle//aOkFbyU9mK/aJFOAl9D0vRmft1ZYCfrY2nDYW2iRES7qyUcpRjXwHMsHsM
+dLA3OgPtycLrQLgseIMyvnvbLPzzwUy9+TnnPrANBxhwiI7Eqx5G2N9dW4cMyG/9
+6C89B1FN2V/bBNr3fQQOusdyGTA5S1SH2e5fZ4ErBorTJOFNP1pPqsinrJZjmrRn
+ucgR8ZXEzsXRKRE+KH+5hnpXWn41hI/W7DAleIqE5S9rYMiWv1uzpxBgDNtKCYHa
+qtqe/B/xlAjGM9mz2yqyUf4RpzmDwEX8DPtmpqtnuO2uCF+++UkNCL6rJEtC1gLb
+1QGQZh09M5q6K7rNzuJcsFnRoK92FnN9Cyhot1TnsQZkJ0pSVF+Wam4njqsXAg4f
+sGPGltkve+hYwkU5sz4dfP1I1f6FUwkaF51Gw1VUiiRaP0ZUMfeBdoHOL6vSfKJS
+MFmaghqVbEm+dBXRkipC8dxrxGwYEhIq0AxBDdFECFrAX72G58IcTG3+iJbFMcdt
+5766UDB1KZqnRwJloChDp+cuDvK+ZHDbGM27Gmiw09kOTrIZsstK8GZAc1AZIV1S
+z2pWeTGCi5AJvfNE//53
+=42/W
 -----END PGP SIGNATURE-----
