@@ -1,0 +1,27 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/python-quantumclient-2.2.6.ebuild,v 1.1 2013/08/11 03:34:55 prometheanfire Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python2_7 )
+
+inherit distutils-r1
+
+DESCRIPTION="A client for the OpenStack Quantum API"
+HOMEPAGE="https://launchpad.net/quantum"
+SRC_URI="mirror://pypi/${PN:0:1}/python-neutronclient/python-neutronclient-${PV}.tar.gz"
+S="${WORKDIR}/python-neutronclient-${PV}"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
+RDEPEND="virtual/python-argparse[${PYTHON_USEDEP}]
+		>=dev-python/pbr-0.5.16[${PYTHON_USEDEP}]
+		<dev-python/pbr-0.6[${PYTHON_USEDEP}]
+		>=dev-python/cliff-1.4[${PYTHON_USEDEP}]
+		dev-python/httplib2[${PYTHON_USEDEP}]
+		>=dev-python/iso8601-0.1.4[${PYTHON_USEDEP}]
+		>=dev-python/simplejson-2.0.9[${PYTHON_USEDEP}]"
