@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-quantumclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/ChangeLog,v 1.2 2013/03/11 02:43:44 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-quantumclient/ChangeLog,v 1.3 2013/08/11 03:34:55 prometheanfire Exp $
+
+*python-quantumclient-2.2.6 (11 Aug 2013)
+
+  11 Aug 2013; Matthew Thode <prometheanfire@gentoo.org>
+  +python-quantumclient-2.2.6.ebuild, -python-quantumclient-2.1.ebuild:
+  updating quantumclient
 
 *python-quantumclient-2.2.0 (11 Mar 2013)
 
